PAY-8739: PBA Payment CA Payments